added new online reference for groups and number theory

--- a/sources.bib
+++ b/sources.bib
@@ -39,6 +39,14 @@
   publisher = "Wiley Publishing",
   year      = "2003"
 }
+@book{Judson:AbstractAlgebra,
+  title     = "Abstract Algebra",
+  author    = "Thomas W. Judson",
+  address   = "Ann Arbor, Michigan",
+  isbn      = "978-1-944325-8",
+  publisher = "Orthogonal Publishing",
+  year      = "2018",
+}
 @book{KatzLindell:IMC,
   title     = "Introduction to Modern Cryptography",
   author    = "Jonathan Katz and Yehuda Lindell",
