--- a/report.tex
+++ b/report.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt,dvipsnames*]{report}
 \input{inputs/report_preamble}
 
-\includeonly{chapters/RSA/main}
+\includeonly{chapters/MACs/main}
 
 \title{
 Lecture Notes in Cryptography Engineering
