--- a/sources.bib
+++ b/sources.bib
@@ -67,6 +67,11 @@
   pages     = "284--299",
   isbn      = "978-3-540-44706-1"
 }
+@misc{Maimut:CTR,
+  author = "Diana Maimut",
+  note   = "See \cite{TikZ:for:Cryptographers}.",
+  year   = "2017",
+}
 @book{Shoup:2009,
   title     = "A Computational Introduction to Number Theory and Algebra",
   author    = "Shoup, Victor",
@@ -74,4 +79,10 @@
   year      = "2008",
   edition   = "2nd",
   publisher = "Cambridge University Press",
+}
+@misc{TikZ:for:Cryptographers,
+  author    = {J\'er\'emy Jean},
+  title     = {{TikZ for Cryptographers}},
+  url       = {https://www.iacr.org/authors/tikz/},
+  year      = {2016},
 }
