--- a/report.tex
+++ b/report.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt,dvipsnames*]{report}
 \input{inputs/report_preamble}
 
-\includeonly{chapters/RSA/main}
+\includeonly{chapters/RSA/main,appendices/NumbTheo/main}
 
 \title{
 Lecture Notes in Cryptography Engineering
@@ -28,6 +28,10 @@ Lecture Notes in Cryptography Engineering
 \include{chapters/HashFunctions/main}
 
 \include{chapters/RSA/main}
+
+\appendix
+
+\include{appendices/NumbTheo/main}
 
 \newpage\phantomsection
 \addcontentsline{toc}{chapter}{References}
