TOC showed header in second page

--- a/report.tex
+++ b/report.tex
@@ -17,7 +17,7 @@ Lecture Notes in Cryptography Engineering
 
 \maketitle
 
-\tableofcontents
+{\pagestyle{plain}\tableofcontents\cleardoublepage}
 
 \include{chapters/Intro/main}
 
