--- a/report.tex
+++ b/report.tex
@@ -1,22 +1,21 @@
 \documentclass[a4paper,12pt,dvipsnames*]{report}
-\input{inputs/report_preamble}
-
-\includeonly{chapters/RSA/main,appendices/NumbTheo/main}
+\input{inputs/preamble}
 
 \title{
-Lecture Notes in Cryptography Engineering
+Skeleton for \LaTeX\ articles  % main title
 }
 \author{
-  {Óscar Pereira}\fn{\texttt{oscar@di.uminho.pt}.}
+  {Óscar Pereira}\fn{\texttt{\{https://, oscar@\}randomwalk.eu}.}
 }
 \date{\today}
-
 % --- END PREAMBLE ---
 
 \begin{document}
 
 \maketitle
 
+% Needed to, if the TOC has more than one page, avoid having the header shown
+% from page 2 onwards.
 {\pagestyle{plain}\tableofcontents\cleardoublepage}
 
 \include{chapters/Intro/main}
@@ -33,6 +32,8 @@ Lecture Notes in Cryptography Engineering
 
 \include{appendices/NumbTheo/main}
 
+% The \newpage is needed for the References entry in TOC to indicate the proper
+% page number.
 \newpage\phantomsection
 \addcontentsline{toc}{chapter}{References}
 \bibliographystyle{sane}
